--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html"}
-  - {file: "README.md"}
+  - {file: "index.html", title: Home Change}
+  - {file: "README.md", title: About me}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
-  - {title: Subscribe, icon: rss, url: "/feed.xml"}
+  - {title: Mail, icon: envelope, url: "mailto:sanzida.hossain@okstate.edu"}
+  - {title: Google, icon: google, url: "https://scholar.google.com/citations?user=ytdiw5gAAAAJ&hl=en&authuser=1"}
+  - {title: Linkedin, icon: linkedin, url: "https://www.linkedin.com/in/sahossa/"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
