--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,10 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home Change}
+  - {file: "Sanzida.pdf", title: CV}
   - {file: "README.md", title: About me}
+  - {file: "projects.md", title: Projects}
+  - {file: "publications.md", title: Publications}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:sanzida.hossain@okstate.edu"}
