--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "Sanzida.pdf", title: CV}
+  - {file: "cv.md", title: CV}
   - {file: "index.md", title: About me}
   - {file: "projects.md", title: Projects}
   - {file: "publications.md", title: Publications}
