--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "Sanzida Hossain"
 author: "Sanzida Hossain"
+logo: /assets/img/prof_pic.jpg
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
