--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Sanzida Hossain"
+title: ""
 author: "Sanzida Hossain"
 logo: /assets/img/prof_pic.jpg
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
